--- a/index.html
+++ b/index.html
@@ -1,3 +1,71 @@
-<h1>DA Projects</h1>
+<!DOCTYPE html>
+
+<head>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
+<body class="bg-black text-white">
+<div class="flex justify-center m-5">
+    <div class="bg-gradient-to-r from-blue-800 to-green-800 rounded px-10 py-2">
+        <h1 class="text-5xl font-bold italic font-mono" style="text-shadow:
+   -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+     1px 1px 0 #000;">DA Projects</h1>
+    </div>
+</div>
+
+<div class="grid gap-3 m-5 p-5 grid-cols-2">
+    <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4">
+        <div class="flex flex-col">
+            <h1 class="text-3xl font-bold text-center">Ryan Suwandi</h1>
+            <p class="text-l text-center italic py-1">Eve Online: The popularity of modules</p>
+            <div class="h-2"></div>
+            <div class="aspect-video bg-white flex flex-initial justify-center flex-col w-full h-full rounded-xl p-1">
+                <img src="./imgs/RyanSuwandi.png" class="object-contain max-w-full max-h-full"/>
+            </div>
+            <div class="h-2"></div>
+            <a href="./reports/ProjectReportRyanSuwandi.html" target="_blank" class="text-center underline">Report</a>
+        </div>
+    </div>
+    <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4">
+        <div class="flex flex-col">
+            <h1 class="text-3xl font-bold text-center">Tyler Foo</h1>
+            <p class="text-l text-center italic py-1">Media Adaptations</p>
+            <div class="h-2"></div>
+            <div class="aspect-video bg-white flex flex-initial justify-center flex-col w-full h-full rounded-xl p-1">
+                <img src="./imgs/Tyler.png" class="object-contain max-w-full max-h-full"/>
+            </div>
+            <div class="h-2"></div>
+            <a href="./reports/ProjectReportTyler.html" target="_blank" class="text-center underline">Report</a>
+        </div>
+    </div>
+    <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4">
+        <div class="flex flex-col">
+            <h1 class="text-3xl font-bold text-center">Wee Chong</h1>
+            <p class="text-l text-center italic py-1">Crosswords: Accessibility and Representation</p>
+            <div class="h-2"></div>
+            <div class="aspect-video bg-white flex flex-initial justify-center flex-col w-full h-full rounded-xl p-1">
+                <img src="./imgs/WeeChong.png" class="object-contain max-w-full max-h-full"/>
+            </div>
+            <div class="h-2"></div>
+            <a href="./reports/ProjectReportWeeChong.html" target="_blank" class="text-center underline">Report</a>
+        </div>
+    </div>
+    <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4">
+        <div class="flex flex-col">
+            <h1 class="text-3xl font-bold text-center">Wenkai</h1>
+            <p class="text-l text-center italic py-1">Analysis of Pop Music over the Years</p>
+            <div class="h-2"></div>
+            <div class="aspect-video bg-white flex flex-initial justify-center flex-col w-full h-full rounded-xl p-1">
+                <img src="./imgs/Wenkai.png" class="object-contain max-w-full max-h-full"/>
+            </div>
+            <div class="h-2"></div>
+            <a href="./reports/ProjectReportWenkai.html" target="_blank" class="text-center underline">Report</a>
+        </div>
+    </div>
+
+</div>
 
 sussy!
+</body>
