Change border colors

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
 
 <div class="grid gap-3 m-5 p-5 grid-cols-3">
-    <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4">
+    <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4 border-slate-600">
         <div class="flex flex-col">
             <h1 class="text-3xl font-bold text-center">Ryan Suwandi</h1>
             <p class="text-l text-center italic py-1">Eve Online: The popularity of modules</p>
@@ -28,7 +28,7 @@
             <a href="./reports/ProjectReportRyanSuwandi.html" target="_blank" class="text-center underline">Report</a>
         </div>
     </div>
-    <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4">
+    <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4 border-slate-600">
         <div class="flex flex-col">
             <h1 class="text-3xl font-bold text-center">Tyler Foo</h1>
             <p class="text-l text-center italic py-1">Media Adaptations</p>
@@ -40,7 +40,7 @@
             <a href="./reports/ProjectReportTyler.html" target="_blank" class="text-center underline">Report</a>
         </div>
     </div>
-    <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4">
+    <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4 border-slate-600">
         <div class="flex flex-col">
             <h1 class="text-3xl font-bold text-center">Wee Chong</h1>
             <p class="text-l text-center italic py-1">Crosswords: Accessibility and Representation</p>
@@ -52,7 +52,7 @@
             <a href="./reports/ProjectReportWeeChong.html" target="_blank" class="text-center underline">Report</a>
         </div>
     </div>
-    <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4">
+    <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4 border-slate-600">
         <div class="flex flex-col">
             <h1 class="text-3xl font-bold text-center">Wenkai</h1>
             <p class="text-l text-center italic py-1">Analysis of Pop Music over the Years</p>
