--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
             <a href="./reports/ProjectReportWenkai.html" target="_blank" class="text-center underline">Report</a>
         </div>
     </div>
+    <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4 border-slate-600">
+        <div class="flex flex-col">
+            <h1 class="text-3xl font-bold text-center">Yuebin</h1>
+            <p class="text-l text-center italic py-1">Counter Strike: Global Offensive; Player Analysis</p>
+            <div class="h-2"></div>
+            <div class="aspect-video bg-white flex flex-initial justify-center flex-col w-full h-full rounded-xl p-1">
+                <img src="./imgs/Yuebin.png" class="object-contain max-w-full max-h-full"/>
+            </div>
+            <div class="h-2"></div>
+            <a href="./reports/ProjectReportYuebin.html" target="_blank" class="text-center underline">Report</a>
+        </div>
+    </div>
 
 </div>
 
