--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     </div>
 </div>
 
+<p class="text-l italic text-center">Completed in <b>Sem 2, 2022</b> :)</p>
+
 <div class="grid gap-3 m-5 p-5 grid-cols-3">
     <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4 border-slate-600">
         <div class="flex flex-col">
@@ -22,7 +24,7 @@
             <p class="text-l text-center italic py-1">Eve Online: The popularity of modules</p>
             <div class="h-2"></div>
             <div class="aspect-video bg-white flex flex-initial justify-center flex-col w-full h-full rounded-xl p-1">
-                <img src="./imgs/RyanSuwandi.png" class="object-contain max-w-full max-h-full"/>
+                <img src="./imgs/RyanSuwandi.png" class="object-contain max-w-full max-h-full" alt="Graph"/>
             </div>
             <div class="h-2"></div>
             <a href="./reports/ProjectReportRyanSuwandi.html" target="_blank" class="text-center underline">Report</a>
@@ -34,7 +36,7 @@
             <p class="text-l text-center italic py-1">Media Adaptations</p>
             <div class="h-2"></div>
             <div class="aspect-video bg-white flex flex-initial justify-center flex-col w-full h-full rounded-xl p-1">
-                <img src="./imgs/Tyler.png" class="object-contain max-w-full max-h-full"/>
+                <img src="./imgs/Tyler.png" class="object-contain max-w-full max-h-full" alt="Graph"/>
             </div>
             <div class="h-2"></div>
             <a href="./reports/ProjectReportTyler.html" target="_blank" class="text-center underline">Report</a>
@@ -46,7 +48,7 @@
             <p class="text-l text-center italic py-1">Crosswords: Accessibility and Representation</p>
             <div class="h-2"></div>
             <div class="aspect-video bg-white flex flex-initial justify-center flex-col w-full h-full rounded-xl p-1">
-                <img src="./imgs/WeeChong.png" class="object-contain max-w-full max-h-full"/>
+                <img src="./imgs/WeeChong.png" class="object-contain max-w-full max-h-full" alt="Graph"/>
             </div>
             <div class="h-2"></div>
             <a href="./reports/ProjectReportWeeChong.html" target="_blank" class="text-center underline">Report</a>
@@ -58,7 +60,7 @@
             <p class="text-l text-center italic py-1">Analysis of Pop Music over the Years</p>
             <div class="h-2"></div>
             <div class="aspect-video bg-white flex flex-initial justify-center flex-col w-full h-full rounded-xl p-1">
-                <img src="./imgs/Wenkai.png" class="object-contain max-w-full max-h-full"/>
+                <img src="./imgs/Wenkai.png" class="object-contain max-w-full max-h-full" alt="Graph"/>
             </div>
             <div class="h-2"></div>
             <a href="./reports/ProjectReportWenkai.html" target="_blank" class="text-center underline">Report</a>
@@ -70,7 +72,7 @@
             <p class="text-l text-center italic py-1">Counter Strike: Global Offensive; Player Analysis</p>
             <div class="h-2"></div>
             <div class="aspect-video bg-white flex flex-initial justify-center flex-col w-full h-full rounded-xl p-1">
-                <img src="./imgs/Yuebin.png" class="object-contain max-w-full max-h-full"/>
+                <img src="./imgs/Yuebin.png" class="object-contain max-w-full max-h-full" alt="Graph"/>
             </div>
             <div class="h-2"></div>
             <a href="./reports/ProjectReportYuebin.html" target="_blank" class="text-center underline">Report</a>
