--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <script src="https://cdn.tailwindcss.com"></script>
+    <title>DA Projects</title>
 </head>
 
 <body class="bg-black text-white">
