--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
 <div class="grid gap-3 m-5 p-5 grid-cols-3">
     <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4 border-slate-600">
         <div class="flex flex-col">
+            <h1 class="text-3xl font-bold text-center">Edwin</h1>
+            <p class="text-l text-center italic py-1">The Trends of American Football</p>
+            <div class="h-2"></div>
+            <div class="aspect-video bg-white flex flex-initial justify-center flex-col w-full h-full rounded-xl p-1">
+                <img src="./imgs/Edwin.png" class="object-contain max-w-full max-h-full" alt="Graph"/>
+            </div>
+            <div class="h-2"></div>
+            <a href="./reports/ProjectReportEdwin.html" target="_blank" class="text-center underline">Report</a>
+        </div>
+    </div>
+    <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4 border-slate-600">
+        <div class="flex flex-col">
             <h1 class="text-3xl font-bold text-center">Mahir</h1>
             <p class="text-l text-center italic py-1">Metacritic Games Analysis</p>
             <div class="h-2"></div>
