--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <img src="./imgs/Edwin.png" class="object-contain max-w-full max-h-full" alt="Graph"/>
             </div>
             <div class="h-2"></div>
-            <a href="./reports/ProjectReportEdwin.html" target="_blank" class="text-center underline">Report</a>
+            <a href="reports/ProjectReportEdwin.html" target="_blank" class="text-center underline">Report</a>
         </div>
     </div>
     <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4 border-slate-600">
@@ -40,7 +40,7 @@
                 <img src="./imgs/Mahir.png" class="object-contain max-w-full max-h-full" alt="Graph"/>
             </div>
             <div class="h-2"></div>
-            <a href="./reports/ProjectReportMahir.html" target="_blank" class="text-center underline">Report</a>
+            <a href="reports/ProjectReportMahir.html" target="_blank" class="text-center underline">Report</a>
         </div>
     </div>
     <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4 border-slate-600">
@@ -52,7 +52,7 @@
                 <img src="./imgs/RyanSuwandi.png" class="object-contain max-w-full max-h-full" alt="Graph"/>
             </div>
             <div class="h-2"></div>
-            <a href="./reports/ProjectReportRyanSuwandi.html" target="_blank" class="text-center underline">Report</a>
+            <a href="reports/ProjectReportRyanSuwandi.html" target="_blank" class="text-center underline">Report</a>
         </div>
     </div>
     <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4 border-slate-600">
@@ -64,7 +64,7 @@
                 <img src="./imgs/Tyler.png" class="object-contain max-w-full max-h-full" alt="Graph"/>
             </div>
             <div class="h-2"></div>
-            <a href="./reports/ProjectReportTyler.html" target="_blank" class="text-center underline">Report</a>
+            <a href="reports/ProjectReportTyler.html" target="_blank" class="text-center underline">Report</a>
         </div>
     </div>
     <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4 border-slate-600">
@@ -76,7 +76,7 @@
                 <img src="./imgs/WeeChong.png" class="object-contain max-w-full max-h-full" alt="Graph"/>
             </div>
             <div class="h-2"></div>
-            <a href="./reports/ProjectReportWeeChong.html" target="_blank" class="text-center underline">Report</a>
+            <a href="reports/ProjectReportWeeChong.html" target="_blank" class="text-center underline">Report</a>
         </div>
     </div>
     <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4 border-slate-600">
@@ -88,7 +88,7 @@
                 <img src="./imgs/Wenkai.png" class="object-contain max-w-full max-h-full" alt="Graph"/>
             </div>
             <div class="h-2"></div>
-            <a href="./reports/ProjectReportWenkai.html" target="_blank" class="text-center underline">Report</a>
+            <a href="reports/ProjectReportWenkai.html" target="_blank" class="text-center underline">Report</a>
         </div>
     </div>
     <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4 border-slate-600">
@@ -100,7 +100,7 @@
                 <img src="./imgs/Yuebin.png" class="object-contain max-w-full max-h-full" alt="Graph"/>
             </div>
             <div class="h-2"></div>
-            <a href="./reports/ProjectReportYuebin.html" target="_blank" class="text-center underline">Report</a>
+            <a href="reports/ProjectReportYuebin.html" target="_blank" class="text-center underline">Report</a>
         </div>
     </div>
 
