--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
     </div>
     <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4 border-slate-600">
         <div class="flex flex-col">
+            <h1 class="text-3xl font-bold text-center">Kane</h1>
+            <p class="text-l text-center italic py-1">Fireworks</p>
+            <div class="h-2"></div>
+            <div class="aspect-video bg-white flex flex-initial justify-center flex-col w-full h-full rounded-xl p-1">
+                <img src="./imgs/Kane.png" class="object-contain max-w-full max-h-full" alt="Graph"/>
+            </div>
+            <div class="h-2"></div>
+            <a href="reports/ProjectReportKane.html" target="_blank" class="text-center underline">Report</a>
+        </div>
+    </div>
+    <div class="bg-gradient-to-br from-emerald-600 to-sky-600 rounded-xl p-5 border-4 border-slate-600">
+        <div class="flex flex-col">
             <h1 class="text-3xl font-bold text-center">Mahir</h1>
             <p class="text-l text-center italic py-1">Metacritic Games Analysis</p>
             <div class="h-2"></div>
