added white bg to Kane.png

--- a/test.html
+++ b/test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>DA Projects</title>
     <style>
@@ -45,7 +46,7 @@
                 <section class="p-5">
                     <h2 class="text-3xl font-bold">The trends of American Football</h2>
                     <div class="ml-2 mt-2 min-h-[100px]">
-                        <p class="mb-1">by Ryan</p>
+                        <p class="mb-1">by Edwin</p>
                         <p class="text-gray">American football is the most popular sport in the United States, with many
                             football events taking place every year, such as Super Bowl and NFL. Almost 100 million
                             people tuned in to watch the 2019 Super Bowl. Its popularity is steadily growing both in the
