practiced summary with crossword description
shortened it for conciseness

--- a/index.html
+++ b/index.html
@@ -282,24 +282,14 @@
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
                     <p class="text-zinc-200 italic">
-                        American crosswords are word puzzles, in which the goal is to fill in all the white squares with
-                        letters to fit the given clues. The special rules of American crosswords in particular are that
-                        each square must be used twice and each word has to be at least 3 letters long. The answers are
-                        a mix of trivia and common phrases. There are two main criticisms of American crosswords.
-                        The first criticism is how accessible it is. Sometimes, obscure terms must be used to fill the
-                        grid, as the constructor cannot find a better configuration. These obscure terms are called
-                        "crosswordese". They appear commonly in puzzles as they have convienent letter patterns.
-                        However, as computers have evolved to assist humans in construction, the quality of puzzles have
-                        been getting better and better.
-                        The second criticism is how representative it is. Crosswords have been said to reflect a piece
-                        of personality from the contructor. Originally, crosswords were for straight liberally-educated
-                        white men. As time passed, people realised that there was a lack of representation in terms of
-                        answers or clue-writing for the other groups. Hence, there has been a push to include more of
-                        these people into the crossword. This includes mentorship to women/people of colour/LGBTQ people
-                        to construct crosswords.
-                        This project would aim to find how accessible the crossword currently is, given the rise of
-                        computers as a construction aid. In a similar fashion, it would also like to find out how
-                        representative the crossword is of minorities.
+                        American crosswords are word puzzles, the goal is to fill in all the white squares with 
+                        letters to fit the given clues, with usually 1 correct answer. The special rules of American 
+                        crosswords are that each square must be used twice and each word has to be at 
+                        least 3 letters long. The answers are a mix of trivia and common phrases. These rules may cause 
+                        limitations in answers, causing obscure words to be used, lowering accessibility by the general 
+                        public. Historically, constructors have been white men, leading to a glaring lack of representation 
+                        from other groups. This project would like to investigate these two phenomena: accessibility 
+                        and representation.
                     </p>
                 </div>
             </section>
