eu ler (140mb folium throwing???)

--- a/index.html
+++ b/index.html
@@ -67,6 +67,34 @@
         </a>
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+        <a href="reports/ProjectReportEuLer.html" class="no-underline flex flex-col max-h-full" target="_blank">
+            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
+                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/EuLer.png"
+                     alt="Graph">
+            </div>
+            <section class="p-5 min-h-0 flex flex-col">
+                <h2 class="text-3xl font-bold">The Rise (and Fall) of Wordle</h2>
+                <p class="text-zinc-200 pl-1.5">by <strong>Eu Ler</strong></p>
+                <div class="h-2 flex-none"></div>
+                <div class="overflow-y-scroll p-1.5">
+                    <p class="text-zinc-200 italic">
+                        Wordle was created in mid-2021 (more specifically, the game refers to 20 June 2021 as the first
+                        Wordle) by software engineer John Wardle, who created the game for his girlfriend as he knew she
+                        liked word games. The couple played for months, and after it became a hit in family group chats,
+                        the game was released to the public in October 2021. The game has since become a worldwide
+                        sensation, with millions of people playing it worldwide.
+                        The free-to-play online word guessing game involves players having to guess a 5 letter word in 6
+                        tries. It has a single daily solution, and all players attempt to guess the same word. The game
+                        was purchased from creater Josh Wardle by The New York Times Company in January 2022.
+                        As someone who plays Wordle on a daily basis, I was intrigued to explore Wordle in a more
+                        analytical fashion. In this project, I will look into Wordle's growth (and decline) and
+                        popularity, as well as analyze players' posted results.
+                    </p>
+                </div>
+            </section>
+        </a>
+    </div>
+    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportGreene.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
                 <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Greene.png"
@@ -282,13 +310,14 @@
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
                     <p class="text-zinc-200 italic">
-                        American crosswords are word puzzles, the goal is to fill in all the white squares with 
-                        letters to fit the given clues, with usually 1 correct answer. The special rules of American 
-                        crosswords are that each square must be used twice and each word has to be at 
-                        least 3 letters long. The answers are a mix of trivia and common phrases. These rules may cause 
-                        limitations in answers, causing obscure words to be used, lowering accessibility by the general 
-                        public. Historically, constructors have been white men, leading to a glaring lack of representation 
-                        from other groups. This project would like to investigate these two phenomena: accessibility 
+                        American crosswords are word puzzles, the goal is to fill in all the white squares with
+                        letters to fit the given clues, with usually 1 correct answer. The special rules of American
+                        crosswords are that each square must be used twice and each word has to be at
+                        least 3 letters long. The answers are a mix of trivia and common phrases. These rules may cause
+                        limitations in answers, causing obscure words to be used, lowering accessibility by the general
+                        public. Historically, constructors have been white men, leading to a glaring lack of
+                        representation
+                        from other groups. This project would like to investigate these two phenomena: accessibility
                         and representation.
                     </p>
                 </div>
