--- a/index.html
+++ b/index.html
@@ -127,6 +127,29 @@
         </a>
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+        <a href="reports/ProjectReportHugo.html" class="no-underline flex flex-col max-h-full" target="_blank">
+            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
+                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Hugo.png"
+                     alt="Graph">
+            </div>
+            <section class="p-5 min-h-0 flex flex-col">
+                <h2 class="text-3xl font-bold">Scrabble</h2>
+                <p class="text-zinc-200 pl-1.5">by <strong>Hugo</strong></p>
+                <div class="h-2 flex-none"></div>
+                <div class="overflow-y-scroll p-1.5">
+                    <p class="text-zinc-200 italic">
+                        Scrabble is a game where players construct words out of letters. Each letter has a preset value
+                        based on its frequency, and these values are used to determine how many points each play made by
+                        a player is worth. However, a higher tile value does not correspond to a more generally valuable
+                        tile, and it even may be the opposite. Hence, I would like to discover what the true value of
+                        these tiles are, along with other aspects of competitive play in scrabble, by analyzing datasets
+                        of games in scrabble competitions since 2005, with upwards of 4000 games to look at.
+                    </p>
+                </div>
+            </section>
+        </a>
+    </div>
+    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportKabir.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
                 <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Kabir.png"
