--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="imgs/icon.png">
     <style>
         .card-height {
-            height: 700px;
+            aspect-ratio: 3 / 4;
         }
     </style>
 </head>
@@ -22,6 +22,101 @@
 <p class="text-l italic text-center">Completed in <strong>Sem 2, 2022</strong> :)</p>
 
 <div class="grid gap-7 m-5 p-5 grid-cols-3 items-start">
+    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+        <a href="reports/ProjectReportAlexis.html" class="no-underline flex flex-col max-h-full" target="_blank">
+            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
+                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Alexis.png"
+                     alt="Graph">
+            </div>
+            <section class="p-5 min-h-0 flex flex-col">
+                <h2 class="text-3xl font-bold">Gaming during COVID-19</h2>
+                <p class="text-zinc-200 pl-1.5">by <strong>Alexis</strong></p>
+                <div class="h-2 flex-none"></div>
+                <div class="overflow-y-scroll p-1.5">
+                    <p class="text-zinc-200 italic">
+                        Gaming as an industry has been growing over the years and has certainly grown exponentially at
+                        the height of the pandemic, with games like "Animal Crossing: New Horizons" and "Among Us"
+                        booming in popularity. Hence, I would like to study the overall amount of players it brought to
+                        the gaming industry.
+                    </p>
+                </div>
+            </section>
+        </a>
+    </div>
+    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+        <a href="reports/ProjectReportAyden.html" class="no-underline flex flex-col max-h-full" target="_blank">
+            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
+                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Ayden.png"
+                     alt="Graph">
+            </div>
+            <section class="p-5 min-h-0 flex flex-col">
+                <h2 class="text-3xl font-bold">Indie Games: The Underdogs of Gaming</h2>
+                <p class="text-zinc-200 pl-1.5">by <strong>Ayden</strong></p>
+                <div class="h-2 flex-none"></div>
+                <div class="overflow-y-scroll p-1.5">
+                    <p class="text-zinc-200 italic">
+                        The video game industry has been growing for the past couple of years, with many new games being
+                        developed and released at all times. Many of these games are developed by big game studios,
+                        which have hundreds of people and have massive amounts of funding, allowing them to dedicate a
+                        lot of financial resources and manpower to developing their games. These games are what people
+                        call Triple-A games, or AAA games, games that are distributed by large companies that are
+                        well-known, such as Sony and Microsoft.
+                        However, there has been some negative stigma that has started to surround AAA games. Due to a
+                        variety or reasons, such as microtransactions, incomplete buggy released games and the lack of
+                        risk-taking, many of the AAA games that have been recently released have been widely regarded as
+                        being poorer in quality and being more lackluster to play. This is largely due to the focus of
+                        these AAA game studios becoming more on profits than creating a truly enjoyable game, putting
+                        quantity over quality.
+                        Since AAA games are on the decline, this leaves a gap in the video game industry to be filled.
+                        This is where indie games come in. Indie games are games that are developed by small groups of
+                        individuals without the technical and financial resources that a AAA game studio has. Due to
+                        this, the scope of indie games are usually much more limited than that of AAA games, and it can
+                        be hard for indie game developers to develop a game without much support from a large team.
+                        Despite this, however, many indie games are extremely high in quality and can be compared to
+                        that of AAA games, perhaps even higher in quality than AAA games. indie game developers also
+                        have the freedom to create whatever game idea they want, something that AAA game studios do not
+                        have, resulting in a greater variety of indie games.
+                        The popularity of indie games is quickly rising in popularity, not only among consumers, but
+                        also among game developers. Gamers are starting to see the appeal of indie games, increasing the
+                        demand for them. Many of the games that are sold on Steam, which is one of the most popular
+                        video game distribution services, are indie games, showing that many gamers want to purchase and
+                        play indie games. Indie games are also encouraging more individuals to begin their journey in
+                        game development, with more tools and services to help them develop indie games becoming
+                        available recently. One of these services is itch.io, which is a website where anybody can host
+                        and sell their own indie games independently. While it is not as popular as Steam is as a video
+                        game distribution service, it is focused completely on indie games, allowing indie developers to
+                        publish and sell their own passion projects online.
+                        Therefore, I would like to analyse the rise in popularity in indie games for both consumers and
+                        game developers, as well as how they compare to AAA games.
+                    </p>
+                </div>
+            </section>
+        </a>
+    </div>
+    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+        <a href="reports/ProjectReportChengIan.html" class="no-underline flex flex-col max-h-full" target="_blank">
+            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
+                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/ChengIan.png"
+                     alt="Graph">
+            </div>
+            <section class="p-5 min-h-0 flex flex-col">
+                <h2 class="text-3xl font-bold">Analysis of live streaming of games on Twitch and Youtube</h2>
+                <p class="text-zinc-200 pl-1.5">by <strong>Cheng Ian</strong></p>
+                <div class="h-2 flex-none"></div>
+                <div class="overflow-y-scroll p-1.5">
+                    <p class="text-zinc-200 italic">
+                        In recent years, live streaming has emerged globally due to the internet, with many people in
+                        the world today either consuming such content, or are creating it themselves, through various
+                        live streaming platforms. Two of these platforms, Twitch and Youtube, have grown to become large
+                        content hubs, covering millions of hours of content and many viewers. Twitch, especially, is a
+                        content hub focused on the live streaming of games. In this project, I aim to analyze the
+                        popularity of these platforms, the changing viewership of live streaming content creators on
+                        these platforms (also called 'live streamers'), as well as the content of those streams.
+                    </p>
+                </div>
+            </section>
+        </a>
+    </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportDrew.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
